--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,17 +1,17 @@
 .css_header {
-	color: blue;
+  color: blue;
 }
 
 .javascript_header {
-	color: red;
+  color: red;
 }
 
 .html_header {
-	color: purple;
+  color: purple;
 }
 
 .vue_header {
-	color: #42b983;
+  color: #42b983;
 }
 
 .card-header {
@@ -22,23 +22,23 @@
 }
 
 .card_hover:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.10);
-  transition: all .2s;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s;
   transform: scale(1.01);
 }
 
 .card_hover {
+  transition: all 0.2s;
+}
 
-  transition: all .2s;
-
+.linkToCode {
+  float: right;
 }
 
 @media screen and (max-width: 769px) {
-	.card_hover{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.10);
-  transition: all .2s;
-  transform: scale(1.01);
+  .card_hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.2s;
+    transform: scale(1.01);
+  }
 }
-}
-
-
